test/classes/deitz/test_method_call2.good
test_method_call2.chpl:9: In function 'goo':
test_method_call2.chpl:10: error: Unresolved call ':bar.foo(2)'
error: Candidates are:
test_method_call2.chpl:1: error:   foo(i: int)
test_method_call2.chpl:6: error:   :bar.foo()
